Changed logo / tooltip / modal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,7 @@
 17. Invoice Styles
 18. Tables Styles
 19. Full Calendar
+20. Modals
 
 ============================================================================= */
 
