Finished help modal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2934,3 +2934,9 @@ body .jqstooltip {
         height: 28px;
     }
 }
+
+.help-text {
+    font-size: 15px;
+    color: black;
+    margin: 2px;
+}
