Removed menu and changed fixed logo bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -289,7 +289,7 @@ canvas {
 ==============================================================*/
 
 .footer-copyright {
-    position: fixed;
+    /* position: fixed; */
     bottom: 0px;
     width: 100%;
 }
