--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -1,6 +1,12 @@
 @media print {
     @page {
         size: landscape;
-        margin: 0mm 0mm 0mm 0mm;
+        height: 295mm;
+        width: 208mm;
+        margin: 0;
+    }
+    html {
+        zoom: 70%;
+        margin: 0;
     }
 }
