Bigger letters on printing overview

--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -35,4 +35,7 @@
         text-decoration: underline;
         font-weight: bolder;
     }
+    #overview-table-body {
+        font-size: 21px;
+    }
 }
